--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PQ'
 - !lcsh 'French fiction -- 19th century'
+- GITenberg
 title: Les deux paradis d'Abd-Er-Rhaman
 url: http://www.gutenberg.org/ebooks/27831
